--- a/package.json
+++ b/package.json
@@ -4,5 +4,32 @@
   "main": "index.js",
   "repository": {},
   "author": "JaneWu",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "webpack-dev-server --inline --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "watch": "webpack --progress --color --watch"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
+    "node-sass": "^4.5.0",
+    "sass": "^0.5.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.12.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.22.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1"
+  }
 }
