--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
+    "css3transform-react": "^0.1.0",
     "node-sass": "^4.5.0",
     "sass": "^0.5.0",
     "sass-loader": "^4.1.1",
