--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
@@ -21,6 +22,9 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "css3transform-react": "^0.1.0",
+    "eslint": "^3.16.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.10.0",
     "node-sass": "^4.5.0",
     "sass": "^0.5.0",
     "sass-loader": "^4.1.1",
