--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "watch": "webpack --progress --color --watch"
+    "watch": "webpack --progress --color --watch",
+    "unit": "karma start test/unit/karma.conf.js --single-run"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -29,8 +30,22 @@
     "sass": "^0.5.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.15",
+    "karma-coverage": "^0.5.5",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.24",
+    "karma-webpack": "^1.7.0",
+    "webpack-merge": "^0.8.3",
+    "isparta-loader": "^2.0.0",
+    "phantomjs-prebuilt": "^2.1.3",
+
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.12.0"
+
   },
   "dependencies": {
     "babel-runtime": "^6.22.0",
